--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* styles for accordion */
+.MuiAccordion-root {
+  margin-bottom: 10px;
+  background-color: black;
+  font-family: Inter, sans-serif;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  .MuiAccordionSummary-root {
+  color: black;
+  }
+  .MuiAccordionSummary-content.Mui-expanded {
+  margin: 12px 0;
+  }
+  
+  .MuiAccordionDetails-root {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: black;
+  }
+  
+  /* styles for tables */
+  .MuiTable-root {
+  min-width: 650px;
+  font-family: Inter, sans-serif;
+  }
+  
+  .MuiTableCell-root {
+  font-size: 16px;
+  }
+  
+  /* styles for headings */
+  h1 {
+  font-size: 36px;
+  margin-bottom: 16px;
+  /* font-weight: 500; */
+  font-family: Inter, sans-serif;
+  color: black;
+  text-align: center;
+  }
+  
+  h2 {
+  font-size: 28px;
+  margin-bottom: 12px;
+  font-weight: 500;
+  font-family: Inter, sans-serif;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  
+  h3 {
+  font-size: 24px;
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-family: Inter, sans-serif;
+  color: white;
   }
-}
