--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: center;
 }
 .MuiAccordion-root {
-  
+  margin: 10px;
   background-color: black;
   font-family: Inter, sansa-serif;
   max-width: 650px;
